<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="Status_Schuetzstellung" Id="{dfd13b30-6fe1-4769-8b5d-0022cc9cf87c}">
    <Declaration><![CDATA[TYPE Status_Schuetzstellung :
(
		KuehlenOben,
		PumpDown,
		PumpDown_rev,
		AbtauenOben,
		AbtauenUnten,
		AbtauenElektrisch
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>