<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <POU Name="FB_Schuetzstellung" Id="{708b9cd3-618e-4c49-a643-8acb079c6268}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Schuetzstellung
VAR_INPUT
myStatus: Status_Schuetzstellung;
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE  myStatus OF

KuehlenUnten:
	(*Schütze werden geschaltet*)
		Schuetz_1K3 := TRUE;
		Schuetz_1K4 := FALSE;
		Schuetz_1K5 := TRUE;

	(*Falls Komponente ON ist wird sie auf TRUE gesetzt*)	
		VD_Ventilator_ON			:= TRUE; 
		VD_defrost_Ventilator_ON	:= FALSE;
		ElektrischeHeizung_ON		:= FALSE; 
		
	(*Expansionsventil wird aktiviert und auf 100% gestellt. Komunikation erfolgt über Modbus_EL*)
		EV.SetKuhlleistung := TRUE;
		EV.SollKuhlleistung:= 100;
		
	(*Expansionsventil für die Abtauung wird auf 100% zurückgestellt. Kann verändert werden, um Kälteleistung bzw. Abtaleistung zu variieren*)	
		EV_rev.SetKuhlleistung := TRUE;
		EV_rev.SollKuhlleistung:= 100;
	
PumpDown:
	(*Schütze werden geschaltet*)
		Schuetz_1K3 := TRUE;
		Schuetz_1K4 := FALSE;
		Schuetz_1K5 := TRUE;
		
	(*Falls Komponente ON ist wird sie auf TRUE gesetzt*)	
		VD_Ventilator_ON			:= TRUE;  
		VD_defrost_Ventilator_ON	:= FALSE;
		ElektrischeHeizung_ON		:= FALSE; 
		
	(*Expansionsventil wird auf 0% gestellt. Komunikation erfolgt über Modbus_EL*)
		EV.SetKuhlleistung := TRUE;
		EV.SollKuhlleistung:= 0;
		
	(*Kompressor PID-Regler wird eingestellt*)
		PID_KP.w := Soll_PumpDownDruck;						//Kompressor wird bei 1.5 Bar ausgeschaltet
		IF PID_KP.x <= PT_VD_out.rDruck THEN //??? PT_KP_in.rDruck THEN 
			bPumpDown:= 	TRUE;		//SPS oder KÄLTEMASCHINE kann ausgeschaltet werden
			PID_KP.Aktiv:= FALSE;				//Kompressor wird ausgeschaltet
		END_IF
		
PumpDown_rev:	
	(*Schütze werden geschaltet*)
		Schuetz_1K3 := FALSE;
		Schuetz_1K4 := TRUE;
		Schuetz_1K5 := FALSE;
		
		
	(*Falls Komponente ON ist wird sie auf TRUE gesetzt*)	
		VD_Ventilator_ON			:= FALSE;  
		VD_defrost_Ventilator_ON	:= TRUE;
		ElektrischeHeizung_ON		:= FALSE; 
		
	(*Expansionsventil wird auf 0% gestellt. Komunikation erfolgt über Modbus_EL*)
		EV_rev.SetKuhlleistung := TRUE;
		EV_rev.SollKuhlleistung:= 0;
		
	(*Kompressor PID-Regler wird eingestellt*)
		PID_KP.w := Soll_PumpDownDruck;						//Kompressor wird bei 1.5 Bar ausgeschaltet
		IF PID_KP.x <= PT_VD_out.rDruck THEN//PT_KP_in.rDruck THEN 
			bPumpDown_rev := TRUE;		//SPS oder KÄLTEMASCHINE kann ausgeschaltet werden
			PID_KP.Aktiv:= FALSE;				//Kompressor wird ausgeschaltet
		END_IF
		
AbtauenOben:
	(*Schütze werden geschaltet*)
		Schuetz_1K3 := FALSE;
		Schuetz_1K4 := TRUE;
		Schuetz_1K5 := FALSE;
		
	(*Falls Komponente ON ist wird sie auf TRUE gesetzt*)	
		VD_Ventilator_ON			:= FALSE;  
		VD_defrost_Ventilator_ON	:= TRUE;
		ElektrischeHeizung_ON		:= FALSE; 
	
AbtauenUnten:
	(*Schütze werden geschaltet*)
		Schuetz_1K3 := FALSE;
		Schuetz_1K4 := FALSE;
		Schuetz_1K5 := FALSE;

	(*Falls Komponente ON ist wird sie auf TRUE gesetzt*)	
		VD_Ventilator_ON			:= FALSE;  
		VD_defrost_Ventilator_ON	:= TRUE;
		ElektrischeHeizung_ON		:= FALSE; 
		
AbtauenElektrisch: 
	(*Schütze werden geschaltet*)
		Schuetz_1K3 := TRUE;
		Schuetz_1K4 := FALSE;
		Schuetz_1K5 := TRUE;

	(*Falls Komponente ON ist wird sie auf TRUE gesetzt*)	
		VD_Ventilator_ON			:= FALSE;  
		VD_defrost_Ventilator_ON	:= FALSE;
		ElektrischeHeizung_ON		:= TRUE; 
		
	(*Expansionsventil wird aktiviert und auf 0% gestellt. Komunikation erfolgt über Modbus_EL*)
		EV.SetKuhlleistung := 	TRUE;
		EV.SollKuhlleistung:= 	0;
	

END_CASE
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>